service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-api-service
  labels:
    app: mi-api
spec:
  type: LoadBalancer
  selector:
    app: mi-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
